# ctest-playground

./: CMakeLists.txt  hello.cpp
.github/workflows/: cmake.yml
